--- a/drupal8-dco/Dockerfile
+++ b/drupal8-dco/Dockerfile
@@ -12,7 +12,8 @@ RUN apt-get -y --force-yes --no-install-recommends install \
   libfreetype6-dev libjpeg62-turbo-dev libmcrypt-dev libpng-dev && \
   docker-php-ext-install -j$(nproc) iconv mcrypt && \
   docker-php-ext-configure gd --with-freetype-dir=/usr/include/ --with-jpeg-dir=/usr/include/ &&  \
-  docker-php-ext-install -j$(nproc) gd
+  docker-php-ext-install -j$(nproc) gd && \
+  docker-php-ext-install mysqli pdo pdo_mysql
 
 # Composer
 RUN curl -ksSL https://getcomposer.org/installer | php && \
