Adding make and build-essential

--- a/boilerplate-docker/Dockerfile
+++ b/boilerplate-docker/Dockerfile
@@ -2,13 +2,13 @@ FROM ubuntu:16.04
 
 MAINTAINER Andre Toledo Modesto de Souza <atoledo@ciandt.com>
 
-RUN apt-get update
+RUN apt-get update #redo
 
 # Install basic packages
-RUN apt-get -y --force-yes --no-install-recommends install \
-  git zip unzip curl vim wget ssh rsync
+RUN apt-get -y --no-install-recommends install \
+  git zip unzip curl vim wget ssh rsync make
 
-RUN apt-get -y --force-yes --no-install-recommends install \
+RUN apt-get -y --no-install-recommends install \
   python-pip
 
 RUN curl -O https://bootstrap.pypa.io/get-pip.py
@@ -20,8 +20,8 @@ ENV PATH="~/.local/bin:${PATH}"
 RUN pip install awscli --upgrade --user
 
 # Install Node through NVM
-RUN apt-get -y --force-yes --no-install-recommends install \
-  libpng-dev
+RUN apt-get -y --no-install-recommends install \
+  libpng-dev build-essential
 
 ENV NVM_DIR="$HOME/.nvm"
 ENV NODE_VERSION=8.9.4
